---
source: tests/lexer.rs
expression: "tokens.collect::<Vec<_>>()"
---
[
    Ok(
        Token {
            kind: Lit(
                Number(
                    123.0,
                ),
            ),
            span: Span {
                start: 0,
                end: 3,
            },
        },
    ),
    Ok(
        Token {
            kind: Lit(
                Number(
                    123.456,
                ),
            ),
            span: Span {
                start: 4,
                end: 11,
            },
        },
    ),
    Ok(
        Token {
            kind: Dot,
            span: Span {
                start: 12,
                end: 13,
            },
        },
    ),
    Ok(
        Token {
            kind: Lit(
                Number(
                    456.0,
                ),
            ),
            span: Span {
                start: 13,
                end: 16,
            },
        },
    ),
    Ok(
        Token {
            kind: Lit(
                Number(
                    123.0,
                ),
            ),
            span: Span {
                start: 17,
                end: 20,
            },
        },
    ),
    Ok(
        Token {
            kind: Dot,
            span: Span {
                start: 20,
                end: 21,
            },
        },
    ),
]
